--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
     "dependencies": {
         "cordova-plugin-splashscreen": "6.0.0",
         "cordova-plugin-whitelist": "1.3.5",
-        "monaca-plugin-monaca-core": "3.3.1"
+        "monaca-plugin-monaca-core": "3.3.1",
+        "cordova-plugin-dialogs": "2.0.2"
     },
     "cordova": {
         "plugins": {
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-whitelist": {},
-            "monaca-plugin-monaca-core": {}
+            "monaca-plugin-monaca-core": {},
+            "cordova-plugin-dialogs": {}
         }
     },
     "scripts": {
